# Aero

./: CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml
boot/: Cargo.toml
boot/src/: loader.rs  main.rs  tpm.rs  uefi.rs
drivers/: Cargo.toml
drivers/src/: advanced_imu_drivers.rs  barometer.rs  camera.rs  camera_drivers.rs  communication_drivers.rs  gps.rs  imu.rs  lib.rs  lidar.rs  lidar_drivers.rs  motor.rs  motor_generic.rs  power_drivers.rs  sensor_drivers.rs  sensor_fusion.rs  sensor_generic.rs  traits.rs  vehicle.rs
drivers/src/bus/: can.rs  i2c.rs  mod.rs  spi.rs  uart.rs
drivers/src/hal/: adc.rs  gpio.rs  i2c.rs  interrupt.rs  mod.rs  pwm.rs  spi.rs  timer.rs  uart.rs
kernel/: Cargo.toml
kernel/src/: communication.rs  control.rs  dynamics.rs  gdt.rs  idt.rs  lib.rs  memory.rs  scheduler_rt.rs
kernel/src/ipc/: channel.rs  message.rs  mod.rs  syscall.rs
kernel/src/mem/: frame.rs  heap.rs  mod.rs  paging.rs
kernel/src/sched/: idle.rs  mod.rs  scheduler.rs  task.rs
kernel/src/sync/: mod.rs  once.rs  spinlock.rs
libs/aero-abi/: Cargo.toml
libs/aero-abi/src/: lib.rs
libs/aero-types/: Cargo.toml
libs/aero-types/src/: lib.rs
platform/: aarch64-unknown-none.json  riscv64gc-unknown-none-elf.json  x86_64-unknown-none.json
runtime/: Cargo.toml
runtime/src/: ai_infer.rs  executor.rs  lib.rs  lidar_stream.rs  logger.rs
services/: Cargo.toml
services/src/: lib.rs
services/src/battery/: fuel_gauge.rs  mod.rs
services/src/failsafe/: mod.rs  monitor.rs  watchdog.rs
(+6 files in other folders)
