[workspace]
members = ["boot","kernel","drivers","services","runtime","libs/aero-abi","libs/aero-types"]
resolver = "2"

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Aero Team"]
repository = "https://github.com/aero-os/aero"

[workspace.dependencies]
bitflags = "2.6"
spin = "0.10"
linked_list_allocator = "0.10.6"
heapless = { version = "0.8", features = ["serde"] }
aero-types = { path = "libs/aero-types" }
aero-abi = { path = "libs/aero-abi" }
postcard = { version = "1.1", default-features = false, features = ["alloc"] }

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
opt-level = 3
overflow-checks = true
strip = "debuginfo"

[profile.secure]
inherits = "release"
lto = "fat"
opt-level = "s"
